--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <!-- Invullen: de titel van de standaard of het document - - - - - - - - - - - - - - - - - - -->
-        <title>[ Naam van het document ]</title>    
+        <title>Lineage applied in WaU</title>    
 
         <!-- Kan hier een 'ondertitel' tag worden gemaakt? -->
 		
