--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <section data-format="markdown" data-include="Keuzes.md"></section>
         <section data-format="markdown" data-include="Expertsessies.md"></section>
         <section data-format="markdown" data-include="Informatiemodel.md"></section>
+		 <!-- import door imvertor gegenereerde deel--> 
+  <div id="Objectcatalogus" data-include="data/wau-lin-cat.respec.html" data-include-replace="true"></div>
         <section data-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
         <section data-format="markdown" data-include="Bijlagen.md"></section>
         
