--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
         <section data-format="markdown" data-include="Inleiding.md"></section>
         <section data-format="markdown" data-include="Analyse.md"></section>
         <section data-format="markdown" data-include="Keuzes.md"></section>
-        <section data-format="markdown" data-include="Expertsessies.md"></section>
+<!-- <section data-format="markdown" data-include="Expertsessies.md"></section> -->
+		<section data-format="markdown" data-include="Metadata_extensie.md"></section>
         <section data-format="markdown" data-include="Informatiemodel.md"></section>
 		 <!-- import door imvertor gegenereerde deel--> 
-  <div id="Objectcatalogus" data-include="data/wau-lin-cat.respec.html" data-include-replace="true"></div>
+  <div id="Objectcatalogus" data-include="data/wau-herkomst-cat.respec.html" data-include-replace="true"></div>
         <section data-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
         <section data-format="markdown" data-include="Bijlagen.md"></section>
         
