--- a/data/WaU-lineage-cat.respec.html
+++ b/data/WaU-lineage-cat.respec.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE HTML><section id="cat" class="normative">
-   <h2>Gegevensdefinitie</h2>
+   <h2>UML and objectcataloque</h2>
    <!--MIMCM-Lineage-logisch-1.0-0-20230207-20230404-122043 imvertor Nightly-build.3-->
    <section id="EAID_7EE76A15_DD2E_43a1_8003_B8FBB0BD3C20">
       <h3>   Lineage - detail</h3>
