--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<section data-format="markdown" data-include="Metadata_extensie.md"></section>
         <section data-format="markdown" data-include="Informatiemodel.md"></section>
 		 <!-- import door imvertor gegenereerde deel--> 
-  <div id="Objectcatalogus" data-include="data/WaU-lineage-cat.respec.html" data-include-replace="true"></div>
+  <div id="UML and objectcataloque" data-include="data/WaU-lineage-cat.respec.html" data-include-replace="true"></div>
         <section data-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
         <section data-format="markdown" data-include="Bijlagen.md"></section>
         
