--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='nl'>
+<html lang='en'>
   <!-- HTML-Header - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <head>
         <meta charset='utf-8'>
@@ -20,7 +20,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <!-- Invullen: de titel van de standaard of het document - - - - - - - - - - - - - - - - - - -->
-        <title>Lineage applied in WaU</title>    
+        <title>Lineage applied to IMX-Geo</title>    
 
         <!-- Kan hier een 'ondertitel' tag worden gemaakt? -->
 		
