Update terms/defs and add pathmapping execution

--- a/index-test.html
+++ b/index-test.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <section id="abstract" data-include-format="markdown" data-include="abstract.md"></section>
+  <section id="abstract" data-include-format="markdown" data-include="Samenvatting.md"></section>
   <section id="sotd"></section><!-- Wordt automatisch gevuld -->
 
   <!-- TODO: voeg hier je eigen hoofdstukken toe -->
@@ -24,9 +24,10 @@
         <section data-format="markdown" data-include="Analyse.md"></section>
         <section data-format="markdown" data-include="Keuzes.md"></section>
 <!-- <section data-format="markdown" data-include="Expertsessies.md"></section> -->
-        <section data-format="markdown" data-include="Informatiemodel.md"></section>
+        <!-- <section data-format="markdown" data-include="Informatiemodel.md"></section> -->
 		 <!-- import door imvertor gegenereerde deel--> 
-  <div id="UML and objectcataloque" data-include="data/WaU-lineage-cat.respec.html" data-include-replace="true"></div>
+  <!-- <div id="UML and objectcataloque" data-include="data/WaU-lineage-cat.respec.html" data-include-replace="true"></div> -->
+  <section id="objectcatalog" data-include="cat/imx-lin20231219.html" data-include-replace="true"></section>
         <section data-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
         <section data-format="markdown" data-include="Bijlagen.md"></section>
 
