--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <!-- Invullen: de titel van de standaard of het document - - - - - - - - - - - - - - - - - - -->
-        <title>Lineage applied to IMX-Geo</title>    
+        <title>IMX Lineage model</title>    
 
         <!-- Kan hier een 'ondertitel' tag worden gemaakt? -->
 		
@@ -52,9 +52,9 @@
         <section data-format="markdown" data-include="Analyse.md"></section>
         <section data-format="markdown" data-include="Keuzes.md"></section>
 <!-- <section data-format="markdown" data-include="Expertsessies.md"></section> -->
-        <section data-format="markdown" data-include="Informatiemodel.md"></section>
+
 		 <!-- import door imvertor gegenereerde deel--> 
-  <div id="UML and objectcataloque" data-include="data/WaU-lineage-cat.respec.html" data-include-replace="true"></div>
+  <section id="objectcatalog" data-include="cat/imx-lin20231219.html" data-include-replace="true"></section>
         <section data-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
         <section data-format="markdown" data-include="Bijlagen.md"></section>
         
