--- a/index-test.html
+++ b/index-test.html
@@ -10,7 +10,7 @@
   <script class="remove"> respecConfig = {...organisationConfig, ...respecConfig}</script>
   <script>document.title = respecConfig.title</script>
   <title>Default</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico" />
+  <link rel="shortcut icon" type="image/x-icon" hrThis allows us to convey which data items were used to derive a new data item, and how these were used. Adding thisef="https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico" />
   <script src="https://gitdocumentatie.logius.nl/publicatie/respec/builds/respec-nlgov.js" class="remove" async></script>
 </head>
 
