--- a/index-test.html
+++ b/index-test.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <section id="abstract" data-include-format="markdown" data-include="abstract.md"></section>
+  <section id="abstract" data-include-format="markdown" data-include="samenvatting.md"></section>
   <section id="sotd"></section><!-- Wordt automatisch gevuld -->
 
   <!-- TODO: voeg hier je eigen hoofdstukken toe -->
@@ -31,8 +31,8 @@
         <section data-format="markdown" data-include="Bijlagen.md"></section>
 
  <!-- <section id='conformance'></section> -->
-//  <section id='tof'></section>
-//<section id="index"></section>
+  <section id='tof'></section>
+<section id="index"></section>
 </body>
 
 </html>
