--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <section data-format="markdown" data-include="Informatiemodel.md"></section>
 		 <!-- import door imvertor gegenereerde deel--> 
   <div id="UML and objectcataloque" data-include="data/WaU-lineage-cat.respec.html" data-include-replace="true"></div>
-        <section data-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
-        <section data-format="markdown" data-include="Bijlagen.md"></section>
+    <!--    <section data-format="markdown" data-include="ConclusiesAanbevelingen.md"></section> -->
+    <!--   <section data-format="markdown" data-include="Bijlagen.md"></section> -->
         
         <!-- genereer hier een afbeeldingen lijst- - - - - - - - - - - - - - - - - - - - - - - - - - -->
         <!--<section id="tof"><h2>Lijst van afbeeldingen</h2></section> -->
