--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="js/config.js" class="remove"></script>
   <script class="remove"> respecConfig = {...organisationConfig, ...respecConfig}</script>
   <script>document.title = respecConfig.title</script>
-  <title>Lineage applied to IMX-Geo</title>
+  <title>IMX Lineage model</title>
   <link rel="shortcut icon" type="image/x-icon" href="https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico" />
   <script src="https://gitdocumentatie.logius.nl/publicatie/respec/builds/respec-nlgov.js" class="remove" async></script>
   <!-- De volgende regel zorgt ervoor dat plaatjes uit Imvertor niet geschaald
