--- a/index-test.html
+++ b/index-test.html
@@ -10,12 +10,12 @@
   <script class="remove"> respecConfig = {...organisationConfig, ...respecConfig}</script>
   <script>document.title = respecConfig.title</script>
   <title>Default</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico" />
+  <link rel="shortcut icon" type="image/x-icon" hrThis allows us to convey which data items were used to derive a new data item, and how these were used. Adding thisef="https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico" />
   <script src="https://gitdocumentatie.logius.nl/publicatie/respec/builds/respec-nlgov.js" class="remove" async></script>
 </head>
 
 <body>
-  <section id="abstract" data-include-format="markdown" data-include="samenvatting.md"></section>
+  <section id="abstract" data-include-format="markdown" data-include="Samenvatting.md"></section>
   <section id="sotd"></section><!-- Wordt automatisch gevuld -->
 
   <!-- TODO: voeg hier je eigen hoofdstukken toe -->
@@ -24,9 +24,10 @@
         <section data-format="markdown" data-include="Analyse.md"></section>
         <section data-format="markdown" data-include="Keuzes.md"></section>
 <!-- <section data-format="markdown" data-include="Expertsessies.md"></section> -->
-        <section data-format="markdown" data-include="Informatiemodel.md"></section>
+        <!-- <section data-format="markdown" data-include="Informatiemodel.md"></section> -->
 		 <!-- import door imvertor gegenereerde deel--> 
-  <div id="UML and objectcataloque" data-include="data/WaU-lineage-cat.respec.html" data-include-replace="true"></div>
+  <!-- <div id="UML and objectcataloque" data-include="data/WaU-lineage-cat.respec.html" data-include-replace="true"></div> -->
+  <section id="objectcatalog" data-include="cat/imx-lin20231219.html" data-include-replace="true"></section>
         <section data-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
         <section data-format="markdown" data-include="Bijlagen.md"></section>
 
