--- a/index.html
+++ b/index.html
@@ -1,64 +1,44 @@
 <!DOCTYPE html>
-<html lang='en'>
-  <!-- HTML-Header - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-  <head>
-        <meta charset='utf-8'>
-        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-        <!-- File. . . :  index.html                                                                 -->
-        <!-- Bevat . . :  Template voor de index.html die verplicht is voor respec                   -->
-        <!--              Gebaseerd op https://github.com/Geonovum/respec/wiki                       -->
-        <!--              Deze file moet worden neergezet in de root-directory van de                -->
-        <!--              betreffende standaard.                                                     -->
-        <!-- Door. . . :  Jan van Gelder                                                             -->
-        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-        <!-- Log . . . :  20181015 - JvG - Initiele versie                                           -->
-        <!-- - - - - - - -20191022 - IE - ReSpec file Handreiking Archiveren ruimtelijke plannen     -->
-		<!-- - - - - - - - - - - - - - - -                          -  - - - - - - - - - - - - - - - -->
+<html lang="nl">
 
-        <!-- meta tags - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-        <meta content="text/html; charset=utf-8" http-equiv="content-type">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        
-        <!-- Invullen: de titel van de standaard of het document - - - - - - - - - - - - - - - - - - -->
-        <title>Lineage applied to IMX-Geo</title>    
+<head>
+  <meta content="text/html; charset=utf-8" http-equiv="content-type">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script src="https://cdn.jsdelivr.net/gh/digitalbazaar/respec-mermaid@1.0.1/dist/main.js" class="remove"></script>
+  <script src="https://tools.geostandaarden.nl/respec/config/geonovum-config.js" class="remove"></script>
+  <script src="js/config.js" class="remove"></script>
+  <script class="remove"> respecConfig = {...organisationConfig, ...respecConfig}</script>
+  <script>document.title = respecConfig.title</script>
+  <title>IMX Lineage model</title>
+  <link rel="shortcut icon" type="image/x-icon" href="https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico" />
+  <script src="https://gitdocumentatie.logius.nl/publicatie/respec/builds/respec-nlgov.js" class="remove" async></script>
+  <!-- De volgende regel zorgt ervoor dat plaatjes uit Imvertor niet geschaald
+       worden, zodat de imagemap die op deze plaatjes zit werkt. -->
+  <style>div.imageinfo img {max-width: none;}</style>
+</head>
 
-        <!-- Kan hier een 'ondertitel' tag worden gemaakt? -->
-		
-        <!-- Invullen: de naam van de lokale CSS file  - - - - - - - - - - - - - - - - - - - - - - - -->
-        <link rel="stylesheet" type="text/css" href="./media/Geonovumstyle.css">
-		<link rel='shortcut icon' type='image/x-icon' href='https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico' />
-        <script class="remove" src="./config.js"></script>
-        <script class='remove' src='https://tools.geostandaarden.nl/respec/builds/respec-geonovum.js' async></script>
-    </head>
-    <!-- HTML-Body - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    <body>
-        <section id='abstract' data-format="markdown" data-include="Samenvatting.md"></section>
-        <!-- sodt = 'status of this document'. ReSpec genereert automatisch een tekst hierin - - - - -->
-        <!-- op basis van specType en specStatus.- - - - - - - - - - - - - - - - - - - - - - - - - - -->
-        <!-- Deze automatische tekst kun je aanvullen door tussen <p></p> iets te typen. - - - - - - -->
-        <section id='sotd'></section>
+<body>
 
-        <!-- vanaf hier per hoofdstuk een sectie of een div in het document- - - - - - - - - - - - - -->
-        <!-- Secties komen in de inhoudsopgave div's niet- - - - - - - - - - - - - - - - - - - - - - -->
-        <!-- Secties hebben verplicht <h2> tags, div's niet- - - - - - - - - - - - - - - - - - - - - -->
+  <section id='abstract' data-include-format="markdown" data-include="Samenvatting.md"></section>
+  <!-- sodt = 'status of this document'. ReSpec genereert automatisch een tekst hierin - - - - -->
+  <!-- op basis van specType en specStatus.- - - - - - - - - - - - - - - - - - - - - - - - - - -->
+  <!-- Deze automatische tekst kun je aanvullen door tussen <p></p> iets te typen. - - - - - - -->
+  <section id='sotd'></section>
 
-        <!-- Voorbeelden:- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-        <!-- <div id='H00' data-format="markdown" data-include="filenaam.md"></div>- - - - - - - - - -->
-        <!-- voor een nieuw hoofdstuk kopieer je een regel, en voegt die toe - - - - - - - - - - - - -->
-        <!--
-        -->
-	    <div     data-format="markdown" data-include="Versiebeheer.md"></div>	
-        <section data-format="markdown" data-include="Inleiding.md"></section>
-        <section data-format="markdown" data-include="Analyse.md"></section>
-        <section data-format="markdown" data-include="Keuzes.md"></section>
-<!-- <section data-format="markdown" data-include="Expertsessies.md"></section> -->
-        <section data-format="markdown" data-include="Informatiemodel.md"></section>
-		 <!-- import door imvertor gegenereerde deel--> 
-  <div id="UML and objectcataloque" data-include="data/WaU-lineage-cat.respec.html" data-include-replace="true"></div>
-    <!--    <section data-format="markdown" data-include="ConclusiesAanbevelingen.md"></section> -->
-    <!--   <section data-format="markdown" data-include="Bijlagen.md"></section> -->
-        
-        <!-- genereer hier een afbeeldingen lijst- - - - - - - - - - - - - - - - - - - - - - - - - - -->
-        <!--<section id="tof"><h2>Lijst van afbeeldingen</h2></section> -->
-    </body>
+  <div data-include-format="markdown" data-include="Versiebeheer.md"></div>
+  <section data-include-format="markdown" data-include="Inleiding.md"></section>
+  <section data-include-format="markdown" data-include="Analyse.md"></section>
+  <section data-include-format="markdown" data-include="Keuzes.md"></section>
+
+  <!-- <section data-include-format="markdown" data-include="Expertsessies.md"></section> -->
+
+      <!-- import door imvertor gegenereerde deel-->
+  <section id="objectcatalog" data-include="cat/imx-lin20231219.html" data-include-replace="true"></section>
+  <section data-include-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
+  <section data-include-format="markdown" data-include="Bijlagen.md"></section>
+
+  <section id='conformance'></section>
+  <section id='tof'></section>
+  <section id="index"></section>
+</body>
 </html>
