--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   <!-- <section data-include-format="markdown" data-include="Expertsessies.md"></section> -->
 
       <!-- import door imvertor gegenereerde deel-->
-  <section id="objectcatalog" data-include="cat/imx-lin20231219.html" data-include-replace="true"></section>
-  <section data-include-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
+  <section id="Information model - objectcatalogue" data-include="cat/imx-lin20231219.html" data-include-replace="true"></section>
+ <!-- <section data-include-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
   <section data-include-format="markdown" data-include="Bijlagen.md"></section>
 
-  <section id='conformance'></section>
+  <section id='conformance'></section> -->
   <section id='tof'></section>
   <section id="index"></section>
 </body>
